# SoftOmniSwift

./: .clang-format  CONTRIBUTING.md  README.md  meson.build  setup.bat  setup.sh
HelperPrograms/mason/: Cargo.toml
HelperPrograms/mason/src/: main.rs
HelperPrograms/mason/src/arguments/: arguments.rs
HelperPrograms/mason/src/processing/: mod.rs  processing.rs
Include/: library.hh
Include/Compilation/Commons/: assembler.hh  disassembler.hh  language_compiler.hh  optimizer.hh  program_optimizer.hh  translation_layer.hh
Include/Execution/Commons/: language_runtime.hh
Include/Execution/Machines/: processor.hh
Include/Harnesses/MachineCode/Commons/: instruction_set.hh  machine_code_frontend.hh
Include/Parsing/Commons/Kernels/: language.hh  language_frontend.hh
Sources/: library.cc  meson.build
Sources/Compilation/: meson.build
Sources/Compilation/Commons/: assembler.cc  disassembler.cc  language_compiler.cc  meson.build  optimizer.cc  program_optimizer.cc  translation_layer.cc
Sources/Execution/: meson.build
Sources/Execution/Commons/: language_runtime.cc  meson.build
Sources/Execution/Machines/: meson.build  processor.cc
Sources/Harnesses/: meson.build
Sources/Harnesses/MachineCode/: meson.build
Sources/Harnesses/MachineCode/Commons/: instruction_set.cc  machine_code_frontend.cc  meson.build
Sources/Parsing/Commons/Kernels/: language.cc  language_frontend.cc  meson.build
Tests/: meson.build
Tests/Performance/: meson.build  performance_tests.cc
Tests/Unit/: meson.build  tests.cc
